adp-team/adp-pharmas-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adp-pharmas-webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: adp-pharmas-webapi-label
  template:
    metadata:
      labels:
        pod: adp-pharmas-webapi-label
    spec:
      containers:
        - name: adp-pharmas-webapi-container
          image: matejdelincak/adp-webapi:1.0.0-46
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
